--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <p>Hello boardgames!</p>
+        <h1>Hello boardgames!</h1>
+        <p>Dit is de eerste toegevoegde tekst in mijn repos!</p>
     </body>
 </html>
